# meme-ooorr-test

./: .gitignore  .gitleaksignore  .gitmodules  Makefile  README.md  build_image.sh  hardhat.config.js  package.json  pyproject.toml  run_agent.sh  run_service.sh  sample.env  stop_service.sh  tox.ini
.github/workflows/: main_workflow.yml  release.yaml
abis/0.8.28/: BalancerPriceOracle.json  BuyBackBurnerBalancer.json  BuyBackBurnerProxy.json  BuyBackBurnerUniswap.json  BuyBackBurnerUniswapCelo.json  Meme.json  MemeActivityChecker.json  MemeArbitrum.json  MemeBase.json  MemeCelo.json  MemeEthereum.json  UniswapPriceOracle.json  UniswapPriceOracleCelo.json
audits/: README.md
audits/internal/: README.md
audits/internal2/: README.md
audits/internal3/: README.md
audits/internal4/: README.md
audits/internal5/: README.md
audits/internal6/: README.md
contracts/: BalancerPriceOracle.sol  BuyBackBurner.sol  BuyBackBurnerArbitrum.sol  BuyBackBurnerBalancer.sol  BuyBackBurnerBase.sol  BuyBackBurnerCelo.sol  BuyBackBurnerProxy.sol  CustomERC20.sol  Meme.sol  MemeActivityChecker.sol  MemeArbitrum.sol  MemeBase.sol  MemeCelo.sol  MemeEthereum.sol  MemeFactory.sol  Oracle.sol  PriceOracle.sol  UniPriceOracle.sol  UniswapPriceOracle.sol
contracts/interfaces/: IUniswapV3.sol
contracts/oracles/: BalancerPriceOracle.sol  UniswapPriceOracle.sol
docs/: agents.md  contracts.md  mirrordb_flow.md
mints/: mints.json
pyinstaller/: memeooorr_bin.py
scripts/: aea-config-replace.py  collect.py  ffw_tenderly.py  fund_tenderly.py  get_balance.py  gitleaks_ignore.py  ipfs_pin.py  pull_handles.py  rebuild_tenderly.py  summon.py  tenderly_ffw.py  test_contract.py  test_openai.py  test_prompts.py  test_prompts_tools.py  test_subgraph.py  test_twikit.py
test/: MemeBase.js  MemeBaseLaunchCampaign.js  MemeCelo.js  MemeEthereum.js
(+105 files in other folders)
