[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "memeooorr"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
repository = "https://github.com/dvilelaf/memeooorr"
keywords = [ "autonomy", "autonomous", "autonolas", "service", "multi", "agent",]
classifiers = [ "Environment :: Console", "Environment :: Web Environment", "Development Status :: 2 - Pre-Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Natural Language :: English", "Operating System :: MacOS", "Operating System :: Microsoft", "Operating System :: Unix", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Topic :: Communications", "Topic :: Internet", "Topic :: Scientific/Engineering", "Topic :: Software Development", "Topic :: System",]
[[tool.poetry.packages]]
include = "packages"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
open-autonomy = "==0.19.7"
open-aea = "==1.65.0"
open-aea-ledger-ethereum = "==1.65.0"
typing_extensions = ">=3.10.0.2"
toml = "==0.10.2"
tomte = {version = "==0.2.17", extras = ["cli", "tests"]}
black = "==24.2.0"
isort = "==5.13.2"
peewee = "==3.17.5"
twitter-text-parser = "==3.0.0"
grpcio = "==1.53.0"
asn1crypto = "<1.5.0,>=1.4.0"
open-aea-ledger-cosmos = "==1.65.0"
twikit = "^2.3.2"
py-ecc = "==6.0.0"
pytz = "==2022.2.1"
requests = "<2.31.2,>=2.28.1"
openapi-core = "==0.15.0"
openapi-spec-validator = "<0.5.0,>=0.4.0"
google-generativeai = "==0.8.2"
textblob = ">=0.18.0.post0"
tweepy = "==4.14.0"
pyinstaller = "==6.12.0"
py-eth-sig-utils = "^0.4.0"
safe-eth-py = "^6.3.0"
js2py = "^0.74"
openai = "^1.62.0"
